--- a/src/main/resources/view/Customers.fxml
+++ b/src/main/resources/view/Customers.fxml
@@ -33,7 +33,7 @@
                 <Font size="13.0" />
             </font>
         </JFXButton>
-        <JFXButton fx:id="btnItems" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="25.0" layoutY="321.0" onAction="#itemsButtonOnAction" prefHeight="48.0" prefWidth="143.0" styleClass="nav-item" text="Items" textFill="#f7f9ff">
+        <JFXButton fx:id="btnItems" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="25.0" layoutY="321.0" onAction="#itemsButtonOnAction" prefHeight="48.0" prefWidth="143.0" styleClass="nav-item" text="Menu Items" textFill="#f7f9ff">
             <graphic>
                 <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                     <image>
@@ -128,38 +128,32 @@
                 <Font size="10.0" />
             </font>
         </JFXButton>
-        <Label layoutX="233.0" layoutY="110.0" text="ID" textFill="#f7f9ff">
+        <Label layoutX="237.0" layoutY="110.0" text="Name" textFill="#f7f9ff">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <JFXTextField fx:id="txtId" focusColor="#405aa800" layoutX="233.0" layoutY="149.0" prefHeight="48.0" prefWidth="171.0" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
-        <Label layoutX="424.0" layoutY="110.0" text="Name" textFill="#f7f9ff">
+        <JFXTextField fx:id="txtName" focusColor="#405aa800" layoutX="235.0" layoutY="149.0" prefHeight="48.0" prefWidth="248.0" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
+        <Label layoutX="519.0" layoutY="110.0" text="Phone Number" textFill="#f7f9ff">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <JFXTextField fx:id="txtName" focusColor="#405aa800" layoutX="424.0" layoutY="149.0" prefHeight="48.0" prefWidth="225.0" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
-        <Label layoutX="673.0" layoutY="110.0" text="Address" textFill="#f7f9ff">
+        <JFXTextField fx:id="txtPhnNum" focusColor="#405aa800" layoutX="509.0" layoutY="149.0" prefHeight="48.0" prefWidth="188.0" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
+        <Label layoutX="730.0" layoutY="110.0" text="Address" textFill="#f7f9ff">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <JFXTextField fx:id="txtAddress" focusColor="#405aa800" layoutX="670.0" layoutY="149.0" prefHeight="48.0" prefWidth="231.0" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
-        <Label layoutX="921.0" layoutY="110.0" text="Salary" textFill="#f7f9ff">
-            <font>
-                <Font size="18.0" />
-            </font>
-        </Label>
-        <JFXTextField fx:id="txtSalary" focusColor="#405aa800" layoutX="921.0" layoutY="149.0" prefHeight="48.0" prefWidth="171.0" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
+        <JFXTextField fx:id="txtAddress" focusColor="#405aa800" layoutX="721.0" layoutY="149.0" prefHeight="48.0" prefWidth="349.0" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
         <JFXTextField fx:id="txtSearch" focusColor="#405aa800" layoutX="233.0" layoutY="237.0" prefHeight="48.0" prefWidth="286.0" promptText="Search..." styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
         <TableView fx:id="tblCustomers" layoutX="233.0" layoutY="315.0" prefHeight="340.0" prefWidth="859.0">
             <columns>
-                <TableColumn fx:id="colId" prefWidth="122.0" text="ID" />
-                <TableColumn fx:id="colName" minWidth="0.0" prefWidth="194.0" text="Name" />
-                <TableColumn fx:id="colAddress" prefWidth="241.0" text="Address" />
-                <TableColumn fx:id="colSalary" prefWidth="142.0" text="Salary" />
-                <TableColumn fx:id="colOption" prefWidth="159.0" text="Option" />
+                <TableColumn fx:id="colId" prefWidth="76.0" text="ID" />
+                <TableColumn fx:id="colName" minWidth="0.0" prefWidth="190.0" text="Name" />
+                <TableColumn fx:id="colPhnNum" prefWidth="186.0" text="Phone Number" />
+                <TableColumn fx:id="colAddress" prefWidth="300.0" text="Address" />
+                <TableColumn fx:id="colOption" prefWidth="106.0" text="Option" />
             </columns>
         </TableView>
         <JFXButton fx:id="btnSave" layoutX="990.0" layoutY="675.0" onAction="#saveButtonOnAction" prefHeight="45.0" prefWidth="101.0" stylesheets="@../css/items.css" text="Save" textFill="#242529" />
