Redesigned PlaceOrders.fxml and working on controller

--- a/src/main/resources/view/PlaceOrders.fxml
+++ b/src/main/resources/view/PlaceOrders.fxml
@@ -98,20 +98,15 @@
                 <Font size="13.0" />
             </font>
         </JFXButton>
-        <Label layoutX="233.0" layoutY="29.0" text="Place Orders" textFill="#f7f9ff">
+        <Label layoutX="233.0" layoutY="21.0" text="Place Orders" textFill="#f7f9ff">
             <font>
                 <Font size="24.0" />
             </font>
         </Label>
-        <JFXButton fx:id="btnLogout" layoutX="929.0" layoutY="24.0" onAction="#logoutButtonOnAction" prefHeight="45.0" prefWidth="101.0" text="Logout" textFill="#242529" />
-        <JFXButton fx:id="btnNotifications" layoutX="1049.0" layoutY="25.0" onAction="#notificationsButtonOnAction" prefHeight="44.0" prefWidth="45.0" text="">
-            <graphic>
-                <ImageView fitHeight="16.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../img/notification.png" />
-                    </image>
-                </ImageView>
-            </graphic>
+        <JFXButton fx:id="btnNewCustomer" layoutX="1056.0" layoutY="62.0" onAction="#notificationsButtonOnAction" prefHeight="44.0" prefWidth="54.0" text="New" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
         </JFXButton>
         <Circle centerX="92.0" centerY="142.0" fill="#fff27a" radius="32.0" stroke="TRANSPARENT" strokeType="INSIDE" />
         <ImageView fitHeight="62.0" fitWidth="62.0" layoutX="61.0" layoutY="111.0" pickOnBounds="true" preserveRatio="true">
@@ -129,67 +124,109 @@
                 <Font size="10.0" />
             </font>
         </JFXButton>
-        <Label layoutX="232.0" layoutY="205.0" text="Item Code" textFill="#f7f9ff">
+        <Label layoutX="232.0" layoutY="113.0" text="Item Code" textFill="#f7f9ff">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label layoutX="423.0" layoutY="205.0" text="Description" textFill="#f7f9ff">
+        <Label layoutX="423.0" layoutY="113.0" text="Description" textFill="#f7f9ff">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <JFXTextField fx:id="txtDescription" focusColor="#405aa800" layoutX="423.0" layoutY="244.0" prefHeight="48.0" prefWidth="286.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
-        <Label layoutX="729.0" layoutY="205.0" text="Unit Price" textFill="#f7f9ff">
+        <JFXTextField fx:id="txtDescription" focusColor="#405aa800" layoutX="423.0" layoutY="152.0" prefHeight="48.0" prefWidth="286.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
+        <Label layoutX="729.0" layoutY="113.0" text="Unit Price" textFill="#f7f9ff">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <JFXTextField fx:id="txtUnitPrice" focusColor="#405aa800" layoutX="729.0" layoutY="244.0" prefHeight="48.0" prefWidth="171.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
-        <Label layoutX="920.0" layoutY="205.0" text="QTY" textFill="#f7f9ff">
+        <JFXTextField fx:id="txtUnitPrice" focusColor="#405aa800" layoutX="729.0" layoutY="152.0" prefHeight="48.0" prefWidth="171.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
+        <Label layoutX="920.0" layoutY="111.0" text="QTY" textFill="#f7f9ff">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <JFXTextField fx:id="txtQty" focusColor="#405aa800" layoutX="920.0" layoutY="244.0" prefHeight="48.0" prefWidth="171.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
-        <TableView fx:id="tblOrders" layoutX="233.0" layoutY="359.0" prefHeight="303.0" prefWidth="859.0">
+        <JFXTextField fx:id="txtQty" focusColor="#405aa800" layoutX="920.0" layoutY="152.0" prefHeight="48.0" prefWidth="171.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
+        <TableView fx:id="tblOrders" layoutX="233.0" layoutY="281.0" prefHeight="303.0" prefWidth="859.0">
             <columns>
-                <TableColumn fx:id="colCode" prefWidth="153.0" text="Code" />
-                <TableColumn fx:id="colDescription" minWidth="0.0" prefWidth="209.0" text="Description" />
-                <TableColumn fx:id="colQty" prefWidth="146.0" text="QTY" />
-                <TableColumn fx:id="colAmount" prefWidth="191.0" text="Amount" />
-                <TableColumn fx:id="colOption" prefWidth="159.0" text="Option" />
+                <TableColumn fx:id="colCode" prefWidth="88.0" text="Code" />
+                <TableColumn fx:id="colDescription" minWidth="0.0" prefWidth="320.0" text="Description" />
+                <TableColumn fx:id="colQty" prefWidth="139.0" text="QTY" />
+                <TableColumn fx:id="colAmount" prefWidth="202.0" text="Amount" />
+                <TableColumn fx:id="colOption" prefWidth="109.0" text="Option" />
             </columns>
         </TableView>
         <JFXButton fx:id="btnPlaceOrder" layoutX="964.0" layoutY="675.0" onAction="#placeOrderButtonOnAction" prefHeight="45.0" prefWidth="127.0" stylesheets="@../css/place-orders.css" text="Place Order" textFill="#242529" />
-        <JFXButton fx:id="btnAddToCart" layoutX="963.0" layoutY="303.0" onAction="#addToCartButtonOnAction" prefHeight="45.0" prefWidth="127.0" stylesheets="@../css/place-orders.css" text="Add To Cart" textFill="#242529" />
-        <Label layoutX="232.0" layoutY="99.0" text="Customer ID" textFill="#f7f9ff">
+        <JFXButton fx:id="btnAddToCart" layoutX="963.0" layoutY="216.0" onAction="#addToCartButtonOnAction" prefHeight="45.0" prefWidth="127.0" stylesheets="@../css/place-orders.css" text="Add To Cart" textFill="#242529" />
+        <JFXComboBox fx:id="cmbItemCode" layoutX="230.0" layoutY="154.0" prefHeight="44.0" prefWidth="171.0" styleClass="cmbx" stylesheets="@../css/place-orders.css" />
+        <JFXTextField fx:id="txtName" focusColor="#405aa800" layoutX="452.0" layoutY="60.0" prefHeight="48.0" prefWidth="217.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
+        <Label layoutX="792.0" layoutY="684.0" prefWidth="89.0" text="Total : " textFill="#f7f9ff">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label layoutX="423.0" layoutY="99.0" text="Name" textFill="#f7f9ff">
+        <Label fx:id="lblTotal" layoutX="882.0" layoutY="684.0" text="0.00" textFill="#f7f9ff">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <JFXComboBox fx:id="cmbxCustomerId" layoutX="231.0" layoutY="139.0" prefHeight="48.0" prefWidth="171.0" styleClass="cmbx" stylesheets="@../css/place-orders.css" />
-        <JFXComboBox fx:id="cmbxItemCode" layoutX="231.0" layoutY="242.0" prefHeight="48.0" prefWidth="171.0" styleClass="cmbx" stylesheets="@../css/place-orders.css" />
-        <JFXTextField fx:id="txtName" focusColor="#405aa800" layoutX="424.0" layoutY="139.0" prefHeight="48.0" prefWidth="286.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
-        <Label layoutX="232.0" layoutY="687.0" text="Total : " textFill="#f7f9ff">
-            <font>
-                <Font size="18.0" />
-            </font>
-        </Label>
-        <Label fx:id="lblTotal" layoutX="297.0" layoutY="687.0" text="0.00" textFill="#f7f9ff">
-            <font>
-                <Font size="18.0" />
-            </font>
-        </Label>
-        <Label fx:id="lblOrderId" alignment="CENTER_RIGHT" layoutX="910.0" layoutY="105.0" prefHeight="30.0" prefWidth="162.0" textFill="#f7f9ff">
+        <Label fx:id="lblOrderId" alignment="CENTER_RIGHT" layoutX="910.0" layoutY="107.0" prefHeight="30.0" prefWidth="162.0" textFill="#f7f9ff">
             <font>
                 <Font size="24.0" />
             </font>
         </Label>
+      <JFXTextField fx:id="txtPhnNum" layoutX="233.0" layoutY="56.0" onAction="#txtPhnNumOnAction" prefHeight="48.0" prefWidth="203.0" promptText="Enter Customer Phone number" unFocusColor="#e8dcdc">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></JFXTextField>
+      <JFXTextField fx:id="txtAddress" focusColor="#405aa800" layoutX="683.0" layoutY="60.0" prefHeight="48.0" prefWidth="363.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
+      <Label layoutX="460.0" layoutY="25.0" text="Customer Name" textFill="#f7f9ff">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="689.0" layoutY="25.0" prefHeight="27.0" prefWidth="162.0" text="Customer Address" textFill="#f7f9ff">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="792.0" layoutY="617.0" text="Sub Total : " textFill="#f7f9ff">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblSubTotal" layoutX="882.0" layoutY="617.0" text="0.00" textFill="#f7f9ff">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="792.0" layoutY="649.0" text="Discount : " textFill="#f7f9ff">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblDiscount" layoutX="883.0" layoutY="649.0" text="0.00" textFill="#f7f9ff">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="233.0" layoutY="613.0" prefHeight="27.0" prefWidth="101.0" text="Discount %" textFill="#f7f9ff">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <JFXTextField fx:id="txtDiscount" focusColor="#405aa800" layoutX="231.0" layoutY="640.0" prefHeight="35.0" prefWidth="101.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
+      <Label layoutX="233.0" layoutY="225.0" prefHeight="27.0" prefWidth="84.0" text="Order Type :" textFill="#f7f9ff">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <JFXComboBox fx:id="cmbOrderType" layoutX="317.0" layoutY="221.0" prefHeight="35.0" prefWidth="140.0" styleClass="cmbx" stylesheets="@../css/place-orders.css" />
+      <Label layoutX="483.0" layoutY="225.0" prefHeight="27.0" prefWidth="77.0" text="Table No:" textFill="#f7f9ff">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <JFXTextField fx:id="txtTableNum" focusColor="#405aa800" layoutX="552.0" layoutY="221.0" prefHeight="35.0" prefWidth="101.0" styleClass="txt-input" stylesheets="@../css/place-orders.css" unFocusColor="#4d4d4d00" />
     </children>
 </AnchorPane>
