--- a/src/main/resources/view/PlaceOrders.fxml
+++ b/src/main/resources/view/PlaceOrders.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="744.0" maxWidth="1133.0" minHeight="744.0" minWidth="1133.0" prefHeight="744.0" prefWidth="1133.0" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PlaceOrdersController">
+<AnchorPane maxHeight="1080.0" maxWidth="1920.0" minHeight="768.0" minWidth="1366.0" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PlaceOrdersController">
     <children>
         <Line endX="187.0" startX="187.0" startY="744.0" stroke="#dbdbdb33" />
         <ImageView fitHeight="70.0" fitWidth="162.0" layoutX="23.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
