--- a/src/main/resources/view/PlaceOrders.fxml
+++ b/src/main/resources/view/PlaceOrders.fxml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
-<?import com.jfoenix.controls.JFXTextField?>
-<?import java.lang.String?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.text.*?>
+<?import java.lang.String?>
 <AnchorPane maxHeight="1080.0" maxWidth="1920.0" minHeight="768.0" minWidth="1142.0" prefHeight="768.0" prefWidth="1142.0" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PlaceOrdersController">
     <children>
         <Line endX="187.0" startX="187.0" startY="744.0" stroke="#dbdbdb33" />
@@ -222,7 +216,7 @@
          </font>
       </Label>
       <JFXComboBox fx:id="cmbOrderType" layoutX="317.0" layoutY="251.0" prefHeight="35.0" prefWidth="130.0" styleClass="cmbx" stylesheets="@../css/place-orders.css" />
-      <Label layoutX="483.0" layoutY="255.0" prefHeight="27.0" prefWidth="77.0" text="Table No:" textFill="#f7f9ff">
+      <Label fx:id="lblTableNum" layoutX="483.0" layoutY="255.0" prefHeight="27.0" prefWidth="77.0" text="Table No:" textFill="#f7f9ff">
          <font>
             <Font size="14.0" />
          </font>
