--- a/src/main/resources/reports/bill.jrxml
+++ b/src/main/resources/reports/bill.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.20.6.final using JasperReports Library version 6.20.6-5c96b6aa8a39ac1dc6b6bea4b81168e16dd39231  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="bill" pageWidth="221" pageHeight="850" columnWidth="199" leftMargin="11" rightMargin="11" topMargin="14" bottomMargin="8" uuid="e52fe833-e8e2-40fc-97b2-13f610970ca1">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="bill" pageWidth="222" pageHeight="850" columnWidth="202" leftMargin="10" rightMargin="10" topMargin="7" bottomMargin="7" uuid="e52fe833-e8e2-40fc-97b2-13f610970ca1">
 	<property name="com.jaspersoft.studio.data.sql.tables">
 		<![CDATA[bXVtc2Zvb2Qub3JkZXJzICwxNTUsMTUsYTlkYTQwMjgtMTkyMC00ZjA1LWE5ZmItM2U0ZDEyZTY2
 Y2NhO211bXNmb29kLm9yZGVyX2RldGFpbCAsMTUsMTgxLGI2OTgxN2ExLTJmMmYtNDQzYi1hZDQ5
@@ -87,10 +87,12 @@ WHERE
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="123" splitType="Stretch">
+		<band height="120" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<staticText>
-				<reportElement x="46" y="0" width="107" height="25" uuid="7e398d4a-3c1e-4ebf-839c-1986c81b3b9a">
+				<reportElement x="47" y="0" width="106" height="25" uuid="7e398d4a-3c1e-4ebf-839c-1986c81b3b9a">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="16" isBold="true"/>
@@ -98,7 +100,7 @@ WHERE
 				<text><![CDATA[MUM'S FOOD]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="17" y="25" width="164" height="11" uuid="f4b67e6d-83d2-41e3-b929-53ddfbed234d">
+				<reportElement x="18" y="25" width="164" height="11" uuid="f4b67e6d-83d2-41e3-b929-53ddfbed234d">
 					<property name="com.jaspersoft.studio.unit.height" value="mm"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -107,7 +109,7 @@ WHERE
 				<text><![CDATA[No. 51, MANNAR ROAD, PUTTALAM]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="17" y="35" width="164" height="11" uuid="bd389c09-8677-4164-a55b-14610d1d0df2">
+				<reportElement x="18" y="35" width="164" height="11" uuid="bd389c09-8677-4164-a55b-14610d1d0df2">
 					<property name="com.jaspersoft.studio.unit.width" value="mm"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -154,7 +156,7 @@ WHERE
 				<text><![CDATA[TABLE :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="55" y="89" width="44" height="11" uuid="89e858a4-22c4-4fcb-bc99-7ca9d3f15e93">
+				<reportElement x="52" y="89" width="44" height="11" uuid="89e858a4-22c4-4fcb-bc99-7ca9d3f15e93">
 					<property name="com.jaspersoft.studio.unit.height" value="mm"/>
 					<property name="com.jaspersoft.studio.unit.width" value="mm"/>
 				</reportElement>
@@ -189,8 +191,9 @@ WHERE
 				<textFieldExpression><![CDATA[$P{tblNo} == null || $P{tblNo}.isEmpty() ? "N/A" : $P{tblNo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="102" y="89" width="52" height="11" uuid="2e13d4f1-8dcf-457b-ac33-9a869afda226">
+				<reportElement x="100" y="89" width="54" height="11" uuid="2e13d4f1-8dcf-457b-ac33-9a869afda226">
 					<property name="com.jaspersoft.studio.unit.height" value="mm"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textElement>
 					<font size="8" isBold="true"/>
@@ -214,7 +217,7 @@ WHERE
 				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="6" y="102" width="90" height="16" uuid="06cd58ef-561a-45de-851c-cc346a7b6283">
+				<reportElement x="0" y="102" width="90" height="16" uuid="06cd58ef-561a-45de-851c-cc346a7b6283">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="38d8e962-cdf6-4245-9a22-e586da206a73"/>
 				</reportElement>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
@@ -223,7 +226,7 @@ WHERE
 				<text><![CDATA[PRODUCT]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="100" y="102" width="18" height="16" uuid="fff038a4-812e-4e17-b718-2c67d8b93cfe">
+				<reportElement x="101" y="102" width="18" height="16" uuid="fff038a4-812e-4e17-b718-2c67d8b93cfe">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4a1adb61-2876-4b48-9c49-89d600960c11"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
@@ -233,7 +236,7 @@ WHERE
 				<text><![CDATA[QTY]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="121" y="102" width="31" height="16" uuid="a37c920e-7db8-402d-880d-3bae0564f917">
+				<reportElement x="124" y="102" width="31" height="16" uuid="a37c920e-7db8-402d-880d-3bae0564f917">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1978c3b4-d033-4cec-8afa-b93d073c2a30"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -242,7 +245,7 @@ WHERE
 				<text><![CDATA[PRICE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="155" y="102" width="38" height="16" uuid="d7df40bf-ad20-42c7-a287-818af9a8bc99">
+				<reportElement x="157" y="102" width="38" height="16" uuid="d7df40bf-ad20-42c7-a287-818af9a8bc99">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1978c3b4-d033-4cec-8afa-b93d073c2a30"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -282,7 +285,8 @@ WHERE
 		<band splitType="Stretch"/>
 	</pageHeader>
 	<detail>
-		<band height="33" splitType="Stretch">
+		<band height="24" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField>
 				<reportElement x="0" y="1" width="100" height="22" uuid="3e2e0207-3cfd-472d-ac2b-a5010d2e4a67">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="38d8e962-cdf6-4245-9a22-e586da206a73"/>
@@ -294,7 +298,7 @@ WHERE
 				<textFieldExpression><![CDATA[$F{description}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#.00#;(#.00#)">
-				<reportElement x="121" y="1" width="31" height="22" uuid="4ffa673a-cf42-4421-ad4c-09212437c2a2">
+				<reportElement x="124" y="1" width="31" height="22" uuid="4ffa673a-cf42-4421-ad4c-09212437c2a2">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1978c3b4-d033-4cec-8afa-b93d073c2a30"/>
 				</reportElement>
 				<textElement textAlignment="Center">
@@ -303,7 +307,7 @@ WHERE
 				<textFieldExpression><![CDATA[$F{price}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="100" y="1" width="18" height="22" uuid="618b9f47-8869-4ad4-912f-691ec3d3a387">
+				<reportElement x="101" y="1" width="18" height="22" uuid="618b9f47-8869-4ad4-912f-691ec3d3a387">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4a1adb61-2876-4b48-9c49-89d600960c11"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="mm"/>
@@ -314,8 +318,9 @@ WHERE
 				<textFieldExpression><![CDATA[$F{qty}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#.00#;(#.00#)">
-				<reportElement x="156" y="1" width="36" height="22" uuid="dfd2914a-197b-4fd1-b6b1-6b87161f612b">
+				<reportElement x="155" y="1" width="40" height="22" uuid="dfd2914a-197b-4fd1-b6b1-6b87161f612b">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1978c3b4-d033-4cec-8afa-b93d073c2a30"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Center">
 					<font size="8"/>
@@ -325,38 +330,38 @@ WHERE
 		</band>
 	</detail>
 	<summary>
-		<band height="68" splitType="Stretch">
+		<band height="53" splitType="Stretch">
 			<staticText>
-				<reportElement x="11" y="14" width="56" height="12" uuid="b17e9f50-ef82-4fab-9faf-a3d63cad0b72">
+				<reportElement x="1" y="7" width="49" height="12" uuid="b17e9f50-ef82-4fab-9faf-a3d63cad0b72">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="mm"/>
 				</reportElement>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[NET TOTAL :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="11" y="26" width="56" height="12" uuid="66370c74-2408-4268-a7a0-cfd94a1535d2">
+				<reportElement x="1" y="19" width="49" height="12" uuid="66370c74-2408-4268-a7a0-cfd94a1535d2">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					<property name="com.jaspersoft.studio.unit.width" value="mm"/>
 				</reportElement>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[DISCOUNT :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="11" y="38" width="56" height="12" uuid="2ddf21f0-271b-4940-8fe4-c2c38794f290">
+				<reportElement x="1" y="31" width="49" height="12" uuid="2ddf21f0-271b-4940-8fe4-c2c38794f290">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="mm"/>
 				</reportElement>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[TOTAL :]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="134" y="14" width="56" height="12" uuid="583b3b87-4cd3-4d99-abed-54d306a219ff">
+				<reportElement x="135" y="7" width="56" height="12" uuid="583b3b87-4cd3-4d99-abed-54d306a219ff">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
@@ -365,7 +370,7 @@ WHERE
 				<textFieldExpression><![CDATA[$P{subTotal}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="134" y="26" width="56" height="13" uuid="be3f6162-a43a-4f28-8fad-c8eb3fc309b9">
+				<reportElement x="135" y="19" width="56" height="13" uuid="be3f6162-a43a-4f28-8fad-c8eb3fc309b9">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
@@ -374,7 +379,7 @@ WHERE
 				<textFieldExpression><![CDATA[$P{discount}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="0" width="199" height="10" uuid="5a03b282-2620-46b5-92dc-53c3b2da2add">
+				<reportElement x="0" y="0" width="199" height="6" uuid="5a03b282-2620-46b5-92dc-53c3b2da2add">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -384,7 +389,7 @@ WHERE
 				<text><![CDATA[------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="109" y="39" width="81" height="12" uuid="80fb30ef-030c-48df-913d-3920b20d0297">
+				<reportElement x="110" y="32" width="81" height="12" uuid="80fb30ef-030c-48df-913d-3920b20d0297">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
@@ -393,11 +398,11 @@ WHERE
 				<textFieldExpression><![CDATA[new BigDecimal($P{subTotal}).subtract(new BigDecimal($P{discount}))]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="58" width="189" height="7" uuid="902a0ff4-df0c-4121-9886-803f5828f4b1"/>
+				<reportElement x="0" y="44" width="192" height="8" uuid="902a0ff4-df0c-4121-9886-803f5828f4b1"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="4" isBold="true"/>
+					<font size="5" isBold="true"/>
 				</textElement>
-				<text><![CDATA[© 2024 ALGO-DIG 0779208210]]></text>
+				<text><![CDATA[© Software by ALGO DIG 0779208210]]></text>
 			</staticText>
 		</band>
 	</summary>
