--- a/src/main/resources/view/Categories.fxml
+++ b/src/main/resources/view/Categories.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.*?>
 <?import java.lang.String?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="728.0" prefWidth="1366.0" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CustomersController">
+<AnchorPane maxHeight="744.0" maxWidth="1133.0" minHeight="744.0" minWidth="1133.0" prefHeight="744.0" prefWidth="1133.0" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CategoriesController">
     <children>
         <Line endX="187.0" startX="187.0" startY="744.0" stroke="#dbdbdb33" />
         <ImageView fitHeight="70.0" fitWidth="162.0" layoutX="23.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
@@ -52,7 +52,7 @@
                 <Font size="13.0" />
             </font>
         </JFXButton>
-        <JFXButton fx:id="btnCustomers" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="25.0" layoutY="431.0" onAction="#customersButtonOnAction" prefHeight="48.0" prefWidth="143.0" text="Customers" textFill="#f7f9ff">
+        <JFXButton fx:id="btnCustomers" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="25.0" layoutY="431.0" onAction="#customersButtonOnAction" prefHeight="48.0" prefWidth="143.0" styleClass="nav-item" text="Customers" textFill="#f7f9ff">
             <graphic>
                 <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                     <image>
@@ -63,10 +63,6 @@
             <font>
                 <Font size="13.0" />
             </font>
-            <styleClass>
-                <String fx:value="nav-item" />
-                <String fx:value="active-nav-item" />
-            </styleClass>
         </JFXButton>
         <JFXButton fx:id="btnPlaceOrders" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="25.0" layoutY="486.0" onAction="#placeOrdersButtonOnAction" prefHeight="48.0" prefWidth="143.0" styleClass="nav-item" text="Place Orders" textFill="#f7f9ff">
             <graphic>
@@ -80,18 +76,22 @@
                 <Font size="13.0" />
             </font>
         </JFXButton>
-        <JFXButton fx:id="btnCategories" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="36.0" layoutY="536.0" onAction="#categoriesButtonOnAction" prefHeight="48.0" prefWidth="127.0" text="Categories" textFill="#f7f9ff">
-            <graphic>
-                <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../img/categories.png" />
-                    </image>
-                </ImageView>
-            </graphic>
-            <font>
-                <Font size="13.0" />
-            </font>
-        </JFXButton>
+      <JFXButton fx:id="btnCategories" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="24.0" layoutY="536.0" onAction="#categoriesButtonOnAction" prefHeight="48.0" prefWidth="143.0" text="Categories" textFill="#f7f9ff">
+         <graphic>
+            <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/categories.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font size="13.0" />
+         </font>
+         <styleClass>
+            <String fx:value="nav-item" />
+            <String fx:value="active-nav-item" />
+         </styleClass>
+      </JFXButton>
         <JFXButton fx:id="btnSettings" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="25.0" layoutY="658.0" onAction="#settingsButtonOnAction" prefHeight="48.0" prefWidth="143.0" styleClass="nav-item" text="Settings" textFill="#f7f9ff">
             <graphic>
                 <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
@@ -104,7 +104,7 @@
                 <Font size="13.0" />
             </font>
         </JFXButton>
-        <Label layoutX="233.0" layoutY="29.0" text="Customers" textFill="#f7f9ff">
+        <Label layoutX="233.0" layoutY="29.0" text="Categories" textFill="#f7f9ff">
             <font>
                 <Font size="24.0" />
             </font>
@@ -135,36 +135,27 @@
                 <Font size="10.0" />
             </font>
         </JFXButton>
-        <Label layoutX="242.0" layoutY="87.0" text="Name" textFill="#f7f9ff">
+      <Label layoutX="338.0" layoutY="110.0" text="ID" textFill="#f7f9ff">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <JFXTextField fx:id="txtId" focusColor="#405aa800" layoutX="330.0" layoutY="147.0" prefHeight="40.0" prefWidth="94.0" promptText="Enter ID" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
+        <Label layoutX="451.0" layoutY="109.0" text="Name" textFill="#f7f9ff">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <JFXTextField fx:id="txtName" focusColor="#405aa800" layoutX="235.0" layoutY="122.0" prefHeight="48.0" prefWidth="255.0" promptText="John Doe" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
-        <Label layoutX="532.0" layoutY="85.0" text="Phone Number" textFill="#f7f9ff">
-            <font>
-                <Font size="18.0" />
-            </font>
-        </Label>
-        <JFXTextField fx:id="txtPhnNum" focusColor="#405aa800" layoutX="524.0" layoutY="122.0" prefHeight="48.0" prefWidth="196.0" promptText="07XXXXXXXX" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
-        <Label layoutX="768.0" layoutY="85.0" text="Address" textFill="#f7f9ff">
-            <font>
-                <Font size="18.0" />
-            </font>
-        </Label>
-        <JFXTextField fx:id="txtAddress" focusColor="#405aa800" layoutX="756.0" layoutY="122.0" onAction="#txtAddressOnAction" prefHeight="48.0" prefWidth="563.0" promptText="Address Line 1" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
-        <JFXTextField fx:id="txtSearch" focusColor="#405aa800" layoutX="236.0" layoutY="198.0" prefHeight="48.0" prefWidth="286.0" promptText="Search..." styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
-        <TableView fx:id="tblCustomers" layoutX="230.0" layoutY="270.0" prefHeight="360.0" prefWidth="1091.0">
+        <JFXTextField fx:id="txtName" focusColor="#405aa800" layoutX="443.0" layoutY="146.0" prefHeight="40.0" prefWidth="286.0" promptText="Enter category name" styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
+        <JFXTextField fx:id="txtSearch" focusColor="#405aa800" layoutX="330.0" layoutY="218.0" prefHeight="48.0" prefWidth="286.0" promptText="Search..." styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
+        <TableView fx:id="tblCategories" layoutX="329.0" layoutY="300.0" prefHeight="358.0" prefWidth="646.0">
             <columns>
-                <TableColumn fx:id="colId" prefWidth="66.66668701171875" text="ID" />
-                <TableColumn fx:id="colName" minWidth="0.0" prefWidth="224.66668701171875" text="Name" />
-                <TableColumn fx:id="colPhnNum" prefWidth="234.33331298828125" text="Phone Number" />
-                <TableColumn fx:id="colAddress" prefWidth="458.0" text="Address" />
-                <TableColumn fx:id="colOption" prefWidth="106.66668701171875" text="Option" />
+                <TableColumn fx:id="colId" prefWidth="87.0" text="ID" />
+                <TableColumn fx:id="colName" minWidth="0.0" prefWidth="423.0" text="Name" />
+                <TableColumn fx:id="colOption" minWidth="0.0" prefWidth="133.0" text="Option" />
             </columns>
         </TableView>
-        <JFXButton fx:id="btnSave" layoutX="1177.0" layoutY="648.0" onAction="#saveButtonOnAction" prefHeight="45.0" prefWidth="101.0" stylesheets="@../css/items.css" text="Save" textFill="#242529" />
-      <JFXButton fx:id="btnReport" layoutX="905.0" layoutY="649.0" onAction="#reportButtonOnAction" prefHeight="45.0" prefWidth="101.0" stylesheets="@../css/items.css" text="Report" textFill="#242529" />
-        <JFXButton fx:id="btnUpdate" layoutX="1039.0" layoutY="649.0" onAction="#updateButtonOnAction" prefHeight="45.0" prefWidth="101.0" stylesheets="@../css/items.css" text="Update" textFill="#242529" />
+        <JFXButton fx:id="btnSave" layoutX="945.0" layoutY="675.0" onAction="#saveButtonOnAction" prefHeight="45.0" prefWidth="101.0" stylesheets="@../css/items.css" text="Save" textFill="#242529" />
+        <JFXButton fx:id="btnUpdate" layoutX="824.0" layoutY="675.0" onAction="#updateButtonOnAction" prefHeight="45.0" prefWidth="101.0" stylesheets="@../css/items.css" text="Update" textFill="#242529" />
     </children>
 </AnchorPane>
