--- a/src/main/resources/view/PlaceOrderNewTab.fxml
+++ b/src/main/resources/view/PlaceOrderNewTab.fxml
@@ -96,6 +96,18 @@
                 <String fx:value="active-nav-item" />
             </styleClass>
         </JFXButton>
+        <JFXButton fx:id="btnCategories" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="36.0" layoutY="536.0" onAction="#categoriesButtonOnAction" prefHeight="48.0" prefWidth="127.0" text="Categories" textFill="#f7f9ff">
+            <graphic>
+                <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../img/categories.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+            <font>
+                <Font size="13.0" />
+            </font>
+        </JFXButton>
         <JFXButton fx:id="btnSettings" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="25.0" layoutY="658.0" onAction="#settingsButtonOnAction" prefHeight="48.0" prefWidth="143.0" styleClass="nav-item" text="Settings" textFill="#f7f9ff">
             <graphic>
                 <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
