--- a/src/main/resources/css/items.css
+++ b/src/main/resources/css/items.css
@@ -7,7 +7,7 @@
     -fx-border-width: 3;
 }
 
-#btnSave, #btnUpdate, #btnReport {
+#btnSave, #btnUpdate, #btnReport, #btnSetCustomer {
     -fx-background-color: #FFF27A;
     -fx-border-radius: 14;
     -fx-background-radius: 14;
