--- a/src/main/resources/view/Orders.fxml
+++ b/src/main/resources/view/Orders.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.*?>
-<?import java.lang.String?>
-<AnchorPane maxHeight="744.0" maxWidth="1133.0" minHeight="744.0" minWidth="1133.0" prefHeight="744.0" prefWidth="1133.0" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrdersController">
+<?import javafx.scene.text.Font?>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1340.0" stylesheets="@../css/home.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrdersController">
     <children>
         <Line endX="187.0" startX="187.0" startY="744.0" stroke="#dbdbdb33" />
         <ImageView fitHeight="70.0" fitWidth="162.0" layoutX="23.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
@@ -109,8 +114,8 @@
                 <Font size="24.0" />
             </font>
         </Label>
-        <JFXButton fx:id="btnLogout" layoutX="929.0" layoutY="24.0" onAction="#logoutButtonOnAction" prefHeight="45.0" prefWidth="101.0" text="Logout" textFill="#242529" />
-        <JFXButton fx:id="btnNotifications" layoutX="1049.0" layoutY="25.0" onAction="#notificationsButtonOnAction" prefHeight="44.0" prefWidth="45.0" text="">
+        <JFXButton fx:id="btnLogout" layoutX="1155.0" layoutY="24.0" onAction="#logoutButtonOnAction" prefHeight="45.0" prefWidth="101.0" text="Logout" textFill="#242529" />
+        <JFXButton fx:id="btnNotifications" layoutX="1275.0" layoutY="25.0" onAction="#notificationsButtonOnAction" prefHeight="44.0" prefWidth="45.0" text="">
             <graphic>
                 <ImageView fitHeight="16.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
                     <image>
@@ -136,12 +141,16 @@
             </font>
         </JFXButton>
         <JFXTextField fx:id="txtSearch" focusColor="#405aa800" layoutX="233.0" layoutY="110.0" prefHeight="48.0" prefWidth="286.0" promptText="Search..." styleClass="txt-input" stylesheets="@../css/items.css" unFocusColor="#4d4d4d00" />
-        <TableView fx:id="tblOrders" layoutX="233.0" layoutY="198.0" prefHeight="500.0" prefWidth="859.0">
+        <TableView fx:id="tblOrders" layoutX="217.0" layoutY="198.0" prefHeight="523.0" prefWidth="1087.0">
             <columns>
-                <TableColumn fx:id="colOrderId" prefWidth="160.0" text="Order ID" />
-                <TableColumn fx:id="colItemCode" minWidth="0.0" prefWidth="196.0" text="Item Code" />
-                <TableColumn fx:id="colQty" prefWidth="240.0" text="QTY" />
-                <TableColumn fx:id="colUnitPrice" prefWidth="262.0" text="Unit Price" />
+                <TableColumn fx:id="colTimeStamp" minWidth="0.0" prefWidth="170.0" text="TimeStamp" />
+                <TableColumn fx:id="colOrderId" prefWidth="152.0" text="Order ID" />
+                <TableColumn fx:id="colCustomer" prefWidth="145.0" text="Customer Name" />
+                <TableColumn fx:id="colOrderType" prefWidth="118.0" text="Order Type" />
+                <TableColumn fx:id="colUser" prefWidth="145.0" text="User" />
+                <TableColumn fx:id="colTotal" prefWidth="134.0" text="Total" />
+                <TableColumn fx:id="colPrint" prefWidth="113.0" text="Print" />
+                <TableColumn fx:id="colDelete" prefWidth="108.0" text="Delete" />
             </columns>
         </TableView>
     </children>
